# Apple-Music-Discord-RPC

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cache.rs  helpers.rs  main.rs  types.rs
